--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -1,11 +1,17 @@
+#测试环境============================================================================================================
+poetry.dev.jdbc.driver=com.mysql.jdbc.Driver
+poetry.dev.jdbc.url=jdbc:mysql://localhost:3306/poetry_db?useSSL=false&allowPublicKeyRetrieval=true
+poetry.dev.jdbc.username=root
+poetry.dev.jdbc.password=Aa123456
+
 #仿真环境 remote test============================================================================================================
-foodAI.rt.jdbc.driver=com.mysql.jdbc.Driver
-foodAI.rt.jdbc.url=jdbc:mysql://47.103.134.141:3306/wl_test_db?allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
-foodAI.rt.jdbc.username=root
-foodAI.rt.jdbc.password=wangqilong
+poetry.rt.jdbc.driver=com.mysql.jdbc.Driver
+poetry.rt.jdbc.url=jdbc:mysql://47.103.134.141:3306/wl_test_db?allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
+poetry.rt.jdbc.username=root
+poetry.rt.jdbc.password=wangqilong
 
 #正式环境============================================================================================================
-foodAI.pro.jdbc.driver=com.mysql.jdbc.Driver
-foodAI.pro.jdbc.url=jdbc:mysql://47.103.134.141:3306/sch_db?allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
-foodAI.pro.jdbc.username=root
-foodAI.pro.jdbc.password=wangqilong
+poetry.pro.jdbc.driver=com.mysql.jdbc.Driver
+poetry.pro.jdbc.url=jdbc:mysql://47.103.134.141:3306/sch_db?allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
+poetry.pro.jdbc.username=root
+poetry.pro.jdbc.password=wangqilong
