--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -12,6 +12,6 @@ poetry.rt.jdbc.password=wangqilong
 
 #正式环境============================================================================================================
 poetry.pro.jdbc.driver=com.mysql.jdbc.Driver
-poetry.pro.jdbc.url=jdbc:mysql://47.103.134.141:3306/sch_db?allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
+poetry.pro.jdbc.url=jdbc:mysql://47.103.134.141:3306/poetry_db?allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
 poetry.pro.jdbc.username=root
 poetry.pro.jdbc.password=wangqilong
