--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -6,12 +6,12 @@ poetry.dev.jdbc.password=Aa123456
 
 #仿真环境 remote test============================================================================================================
 poetry.rt.jdbc.driver=com.mysql.jdbc.Driver
-poetry.rt.jdbc.url=jdbc:mysql://47.103.134.141:3306/wl_test_db?allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
+poetry.rt.jdbc.url=jdbc:mysql://47.103.134.141:3306/wl_test_db?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
 poetry.rt.jdbc.username=root
 poetry.rt.jdbc.password=wangqilong
 
 #正式环境============================================================================================================
 poetry.pro.jdbc.driver=com.mysql.jdbc.Driver
-poetry.pro.jdbc.url=jdbc:mysql://47.103.134.141:3306/poetry_db?allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
+poetry.pro.jdbc.url=jdbc:mysql://47.103.134.141:3306/poetry_db?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
 poetry.pro.jdbc.username=root
 poetry.pro.jdbc.password=wangqilong
