--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -1,17 +1,17 @@
 #测试环境============================================================================================================
 poetry.dev.jdbc.driver=com.mysql.jdbc.Driver
-poetry.dev.jdbc.url=jdbc:mysql://localhost:3306/poetry_db?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8
+poetry.dev.jdbc.url=jdbc:mysql://localhost:3306/poetry_db?useSSL=false&allowPublicKeyRetrieval=true
 poetry.dev.jdbc.username=root
 poetry.dev.jdbc.password=Aa123456
 
 #仿真环境 remote test============================================================================================================
 poetry.rt.jdbc.driver=com.mysql.jdbc.Driver
-poetry.rt.jdbc.url=jdbc:mysql://47.103.134.141:3306/wl_test_db?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf8
+poetry.rt.jdbc.url=jdbc:mysql://47.103.134.141:3306/wl_test_db?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
 poetry.rt.jdbc.username=root
 poetry.rt.jdbc.password=wangqilong
 
 #正式环境============================================================================================================
 poetry.pro.jdbc.driver=com.mysql.jdbc.Driver
-poetry.pro.jdbc.url=jdbc:mysql://47.103.134.141:3306/poetry_db?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false&useUnicode=true&characterEncoding=utf8
+poetry.pro.jdbc.url=jdbc:mysql://47.103.134.141:3306/poetry_db?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&failOverReadOnly=false
 poetry.pro.jdbc.username=root
 poetry.pro.jdbc.password=wangqilong
